--- a/databank/general_data/templates/general_data/water_templates/water_table.html
+++ b/databank/general_data/templates/general_data/water_templates/water_table.html
@@ -155,35 +155,35 @@
       <table class="table table-striped table-bordered table-sm">
         <thead>
           <tr>
-            <th class="text-white fw-semibold fs-6" scope="col"  style="background:#12486B;">
+            <th class="text-white fw-semibold fs-6 align-middle" scope="col"  style="background:#12486B;">
               <input
               type="checkbox"
               id="select-all"
               onclick="toggleSelectAll()"
             />
             </th>
-            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class="text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
               Year
             </th>
-            <th class="text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
+            <th class="text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;" >
               Country
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-              Code_Type
+            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+              Code Type
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Description
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Unit
             </th>
-            <th class=" text-white fst-normal  " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-                Volume_In_Cubic_Meter
+            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+                Volume In Cubic Meter
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
-              Name_Of_The_River
+            <th class=" text-white fst-normal align-middle " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+              Name Of The River
             </th>
-            <th class=" text-white fst-normal " scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
+            <th class=" text-white fst-normal align-middle" scope="col" style="font-size:14px; font-weight: 500; background: #12486B;">
                 Action
             </th>
           </tr>
