--- a/databank/general_data/templates/general_data/Political_templates/political_table.html
+++ b/databank/general_data/templates/general_data/Political_templates/political_table.html
@@ -54,7 +54,7 @@
               {% endfor %}
             </select>
           </div>
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <label for="ViewPoliticalPartyNamet">Political Party Name </label>
             <input
               type="text"
@@ -63,10 +63,10 @@
               placeholder="e.g. party name"
               name="political_party_name"
             />
-          </div>
+          </div> -->
 
 
-          <div class="col-md-3">
+          <!-- <div class="col-md-3">
             <label for="minimum_no_of_members">Minimum No of Members </label>
             <input
               type="number"
@@ -128,7 +128,7 @@
               placeholder="e.g. ward"
               name="ward"
             />
-          </div>
+          </div> -->
           <div class="col-md-3 d-flex align-items-end">
             <button type="submit" class=" btn btn-primary">
               Search
@@ -138,7 +138,11 @@
       </div>
     </div>
   </div>
-  <div class="fs-4 fw-bold text-center">Political Data</div>
+
+  <div class="d-flex justify-content-center">
+    <a class="fs-4 fw-bold mt-4 link-secondary  link-offset-2 link-underline-opacity-0 link-underline-opacity-25-hover"
+        href="{% url 'political_table' %}">Political Data</a>
+</div>
 
 {% if query_len == 0 %}
 <div class="bg-light p-4 text-center fw-normal mt-4 text-danger">
